# rust_user_service

./: Cargo.toml
src/: lib.rs  main.rs
src/env_setup/: connection.rs  keyspace.rs
src/modals/: p_user.rs
src/user_service_api/: user_service.rs
src/user_service_impl/user_command/: models.rs
src/user_service_impl/user_entity/: behaviour.rs
src/user_service_impl/user_event/: modals.rs
src/user_service_impl/user_state/: modals.rs
src/utilities/: mappers.rs
user_service_impl/: Cargo.toml
user_service_impl/src/: lib.rs
user_service_impl/src/constants/: constant.rs  queries.rs
user_service_impl/src/env_setup/: table.rs
user_service_impl/src/eventsourcing/user_command/: models.rs
user_service_impl/src/eventsourcing/user_entity/: behaviour.rs
user_service_impl/src/eventsourcing/user_event/: models.rs
user_service_impl/src/eventsourcing/user_state/: models.rs
user_service_impl/src/models/: user.rs
