[package]
name = "user_service_impl"
version = "0.1.0"
authors = ["rsb007 <rahul.sing@knoldus.in>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
serde_json = "1.0.33"
cdrs = "2.0.0-beta.4"
cdrs_helpers_derive = "0.2.0"
listenfd = "0.3"
failure = "0.1.2"
env_logger = "0.5.12"
eventsourcing-derive = "0.1.1"
eventsourcing = "0.1.1"
serde ="1.0.82"
serde_derive = "1.0.82"
